--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ set(AVAILABLE_TESTS
   "dictionary_test.c"
   "container_test.c"
   "event_test.c"
+  "hashmap_test.c"
   "threadpool_test.c"
 )
 create_test_sourcelist(TESTS_SOURCES IpeeTests.c ${AVAILABLE_TESTS})
